Fix carousel on mobile.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -201,3 +201,6 @@ body {
     height: 335px;
     object-fit: cover;
 }
+.container {
+  max-width: 100%;
+}
